Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9160

qmake: QMAKE_HOST.arch is used by webkit to detect when building for a 64bit platform, however, this does not help when using the 64bit cross compiler command prompt on a 32bit machine

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.0
    • 4.6.2
    • Build tools: qmake
    • None
    • Windows, MSVC specific
    • 1a4ee517638e1ba3cdc622af70b3d53561d23392

    Description

      qmake: QMAKE_HOST.arch is used by webkit to detect when building for a 64bit platform, however, this does not help when using the 64bit cross compiler command prompt on a 32bit machine. Therefore it actually causes a build issue in QtWebKit when built using the 64bit cross compiler command prompt on a 32bit machine because QtWebKit assumes its building for a 32bit target and not a 64bit target.

      Therefore, qmake needs to have a QMAKE_TARGET.arch (or similar) so that this bug can be fixed in QtWebKit correctly

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            albisser Zeno Albisser
            anshaw Andy Shaw (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes