Added variable QMAKE_TARGET.arch to qmake to be used with MSVC++

The variable QMAKE_TARGET.arch shall be used to determine cross
compiling for x64 on a x32 system.

Reviewed-by: Marius Storm-Olsen
Task-number: QTBUG-9160